--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,4 +1,3 @@
 fixtures:
-  symlinks:
-    "resolv_conf": "#{source_dir}"
-
+  repositories:
+    stdlib: "http://github.com/puppetlabs/puppetlabs-stdlib.git"
