--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,12 @@ branches:
   only:
     - master
 language: ruby
-bundler_args: --without development
-script: bundle exec rake spec SPEC_OPTS='--format documentation'
-after_success:
-  - git clone -q git://github.com/puppetlabs/ghpublisher.git .forge-releng
-  - .forge-releng/publish
+before_install: 'bundle install'
+script: bundle exec rake SPEC_OPTS='--format documentation'
 rvm:
-  - 1.8.7
   - 1.9.3
+  - 2.0.0
+gemfile: .travis/Gemfile
 env:
   matrix:
     - PUPPET_GEM_VERSION="~> 2.7.0"
@@ -18,18 +16,11 @@ env:
     - PUPPET_GEM_VERSION="~> 3.1.0"
     - PUPPET_GEM_VERSION="~> 3.2.0"
     - PUPPET_GEM_VERSION="~> 3.3.0"
-  global:
-  - PUBLISHER_LOGIN=saz
-  - secure: |-
-      AyxlzaN0DjhrFcVYMDHo4/qOCTNZCT4rvwJWgC1xPJ08LVukgZg7bV7uDJbH8NR4Br0RN2I6
-      Dltt14tmGhfHQSIdUwkp3bM5XcXoDcbDjO9qzq+lX/N4H4IcCq/VEU+e6DMEsHn1LWwr3EB2
-      sznh4S7XWDaOMitimZhsjgsm6gc=
 matrix:
   include:
-    - rvm: 2.0.0
-      env: PUPPET_GEM_VERSION="~> 3.2.0"
+    - rvm: 1.9.3
+      env: PUPPET_GEM_VERSION="~> 2.7.0"
     - rvm: 2.0.0
       env: PUPPET_GEM_VERSION="~> 3.3.0"
 notifications:
   email: false
-gemfile: .gemfile
