--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ branches:
     - master
 language: ruby
 before_install: 'bundle install'
-script: bundle exec rake SPEC_OPTS='--format documentation'
+bundler_args: --without development
+script: 'bundle exec rake validate && bundle exec rake lint && SPEC_OPTS="--format documentation" bundle exec rake spec'
 rvm:
   - 1.9.3
   - 2.0.0
@@ -13,15 +14,7 @@ env:
   matrix:
     - PUPPET_GEM_VERSION="~> 2.7.0"
     - PUPPET_GEM_VERSION="~> 3.0.0"
-    - PUPPET_GEM_VERSION="~> 3.1.0"
-    - PUPPET_GEM_VERSION="~> 3.2.0"
     - PUPPET_GEM_VERSION="~> 3.3.0"
     - PUPPET_GEM_VERSION="~> 3.7.1"
-matrix:
-  include:
-    - rvm: 1.9.3
-      env: PUPPET_GEM_VERSION="~> 2.7.0"
-    - rvm: 2.0.0
-      env: PUPPET_GEM_VERSION="~> 3.3.0"
 notifications:
   email: false
