--- a/.bundle/config
+++ b/.bundle/config
@@ -1,4 +1,4 @@
 ---
-BUNDLE_WITHOUT: system_tests:development
-BUNDLE_PATH: vendor/bundle
-BUNDLE_DISABLE_SHARED_GEMS: true
+BUNDLE_WITHOUT: "system_tests:development"
+BUNDLE_PATH: "vendor/bundle"
+BUNDLE_DISABLE_SHARED_GEMS: "true"
