excluded .rb for metrics/blocklength

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -133,6 +133,10 @@ Style/AlignParameters:
 Metrics/BlockNesting:
   Enabled: true
 
+Metrics/BlockLength:
+  Exclude:
+    - "**/*_spec.rb"
+
 Style/AsciiComments:
   Enabled: true
 
