Use special template for Solaris 11 to make file resource idempotent

--- a/data/Solaris-11.yaml
+++ b/data/Solaris-11.yaml
@@ -1,3 +1,4 @@
 ---
 resolv_conf::config_file: '/etc/resolv.conf'
+resolv_conf::config_template: 'resolv.conf_sol11.erb'
 resolv_conf::update_cmd: '/usr/sbin/nscfg import -f dns/client'
