--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,12 +6,14 @@ AllCops:
   Exclude:
     - files/**/*
     - vendor/**/*
+    - Gemfile
+    - Rakefile
     - .vendor/**/*
     - pkg/**/*
     - spec/fixtures/**/*
     - Gemfile
     - Rakefile
-Lint/ConditionPosition:
+Layout/ConditionPosition:
   Enabled: true
 
 Lint/ElseLayout:
@@ -34,9 +36,6 @@ Lint/ShadowingOuterLocalVariable:
 
 Lint/LiteralInInterpolation:
   Enabled: true
-
-Style/MixinUsage:
-  Enabled: false
 
 Style/HashSyntax:
   Enabled: false
@@ -76,13 +75,13 @@ Lint/AmbiguousRegexpLiteral:
 Security/Eval:
   Enabled: true
 
-Lint/BlockAlignment:
+Layout/BlockAlignment:
   Enabled: true
 
-Lint/DefEndAlignment:
+Layout/DefEndAlignment:
   Enabled: true
 
-Lint/EndAlignment:
+Layout/EndAlignment:
   Enabled: true
 
 Lint/DeprecatedClassMethods:
@@ -298,6 +297,9 @@ Style/EmptyLiteral:
 Metrics/LineLength:
   Enabled: false
 
+Style/MethodCallWithoutArgsParentheses:
+  Enabled: true
+
 Style/MethodDefParentheses:
   Enabled: true
 
@@ -500,9 +502,6 @@ Lint/UselessAssignment:
 Layout/ClosingParenthesisIndentation:
   Enabled: false
 
-Metrics/BlockLength:
-  Enabled: false
-
 # RSpec
 
 # We don't use rspec in this way
@@ -512,9 +511,7 @@ RSpec/DescribeClass:
 # Example length is not necessarily an indicator of code quality
 RSpec/ExampleLength:
   Enabled: False
-
 RSpec/NestedGroups:                                                                                                                                                                                              
   Max: 4 
-
 RSpec/MultipleExpectations:
   Max: 2
