--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,20 @@ script:
 matrix:
   fast_finish: true
   include:
-  - rvm: 2.2
+  - rvm: 2.3.1
     env: PUPPET_VERSION="~> 4.0" STRICT_VARIABLES="yes" CHECK=test
   - rvm: 2.3.1
     env: PUPPET_VERSION="~> 4.0" STRICT_VARIABLES="yes" CHECK=rubocop
-  - rvm: 2.4
-    env: PUPPET_VERSION="~> 5.0" STRICT_VARIABLES="yes" CHECK=build FORGEDEPLOY=true
+  - rvm: 2.3.1
+    env: PUPPET_VERSION="~> 4.0" STRICT_VARIABLES="yes" CHECK=build FORGEDEPLOY=true
+  - rvm: 2.3.1
+    env: PUPPET_VERSION="~> 5.0" STRICT_VARIABLES="yes" CHECK=test
+  - rvm: 2.3.1
+    env: PUPPET_VERSION="~> 5.0" STRICT_VARIABLES="yes" CHECK=rubocop
+  - rvm: 2.5.3
+    env: PUPPET_VERSION="~> 6.1" STRICT_VARIABLES="yes" CHECK=test
+  - rvm: 2.5.3
+    env: PUPPET_VERSION="~> 6.1" STRICT_VARIABLES="yes" CHECK=rubocop
 notifications:
   email: false
 deploy:
@@ -30,4 +38,5 @@ deploy:
   on:
     tags: true
     all_branches: true
+    rvm: 2.3.1
     condition: "$FORGEDEPLOY = true"
