update rubocop config

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -178,7 +178,7 @@ Style/WhenThen:
 Style/WordArray:
   Enabled: true
 
-Style/UnneededPercentQ:
+Style/RedundantPercentQ:
   Enabled: true
 
 Layout/Tab:
