--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,5 +1,5 @@
 fixtures:
   symlinks:
     "resolv_conf": "#{source_dir}"
-  repositories:
-    stdlib: "http://github.com/puppetlabs/puppetlabs-stdlib.git"
+  forge_modules:
+    stdlib: "puppetlabs/stdlib"
